# okta-auth-mcp

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml
src/okta_auth/: __init__.py  adapter.py  cli.py  config_wizard.py  credential_store.py  log.py  server.py  settings.py
src/okta_auth/auth/: login.py  session_store.py  totp.py
src/okta_auth/browser/: controller.py  detection.py
src/okta_auth_mcp/: __init__.py  log.py  server.py
src/okta_auth_mcp/auth/: login.py  session_store.py
src/okta_auth_mcp/browser/: controller.py  detection.py  helpers.py
tests/: test_adapter.py  test_cli.py  test_config_wizard.py  test_packaging.py  test_server_smoke.py  test_session_store.py
