[project]
name = "okta-auth-mcp"
version = "0.1.0"
description = "MCP server for Okta SSO authentication with persistent session management"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.9.0",
    "playwright>=1.54.0",
    "pyotp>=2.9.0",
    "pydantic>=2.0.0",
]

[project.scripts]
okta-auth-mcp = "okta_auth_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/okta_auth_mcp"]
